force-app/main/default/objects/GNT_ChatMessage__c/GNT_ChatMessage__c.object-meta.xml
<CustomObject>
    <description>Chat message for custom chat.</description>
    <label>チャットメッセージ</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>メッセージ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>チャットメッセージ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>