force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_Body__c.field-meta.xml
<CustomField>
    <fullName>GNT_Body__c</fullName>
    <label>本文</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>