force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>GNT_ErrorMessage__c</fullName>
    <label>エラーメッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>