force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_ExternalMessageId__c.field-meta.xml
<CustomField>
    <fullName>GNT_ExternalMessageId__c</fullName>
    <externalId>true</externalId>
    <label>外部メッセージID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>