force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_PostedAt__c.field-meta.xml
<CustomField>
    <fullName>GNT_PostedAt__c</fullName>
    <label>投稿日時</label>
    <type>DateTime</type>
</CustomField>