force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_PostedBy__c.field-meta.xml
<CustomField>
    <fullName>GNT_PostedBy__c</fullName>
    <label>投稿者</label>
    <length>120</length>
    <type>Text</type>
</CustomField>