force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_PostedByUser__c.field-meta.xml
<CustomField>
    <fullName>GNT_PostedByUser__c</fullName>
    <label>GNT Posted By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Messages Posted</relationshipLabel>
    <relationshipName>Messages_Posted</relationshipName>
    <type>Lookup</type>
</CustomField>