force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>GNT_SyncStatus__c</fullName>
    <label>GNT Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>