force-app/main/default/objects/GNT_ChatMessage__c/fields/GNT_Thread__c.field-meta.xml
<CustomField>
    <fullName>GNT_Thread__c</fullName>
    <description>Parent Chat Thread</description>
    <label>GNT Thread</label>
    <referenceTo>GNT_ChatThread__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>